[package]
authors = ["Noskcaj <kcajdev@gmail.com>"]
name = "iterm2"
version = "0.2.1"
description = "A library for using iTerm2 escape codes"
repository = "https://github.com/Noskcaj19/iterm2"
homepage = "https://github.com/Noskcaj19/iterm2"
readme = "README.md"
license = "MIT"

keywords = [
    "terminal",
]

[dependencies]
base64 = "0.10.1"
