[package]
authors = ["Noskcaj <kcajdev@gmail.com>"]
name = "iterm2"
version = "0.3.0"
description = "A library for using iTerm2 escape codes"
repository = "https://github.com/Noskcaj19/iterm2"
homepage = "https://github.com/Noskcaj19/iterm2"
readme = "README.md"
license = "MIT"
edition = "2018"

keywords = [
    "terminal",
]

[dependencies]
base64 = "0.10.1"
